Added parallax effect

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,10 @@ html {
     animation-delay: 800ms;
   }
 }
+
+.scrollbar-hide{
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
